<resources>
    <string name="app_name">WildTweet</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="accept_cgu">Accept CGU</string>
    <string name="login">Login</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="error_empty">Please fill your login and password</string>
    <string name="congratulation">Congratulation %s %s</string>
    <string name="username">Username</string>
    <string name="content">Content</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="error_fill_form">Please fill the form</string>
    <string name="last_tweet">Get last tweet</string>
</resources>
